--- a/style-final-responsive.css
+++ b/style-final-responsive.css
@@ -11,20 +11,24 @@ header {
   box-shadow: rgb(200 200 200 / 40%) 1px 2px 3px 2px;
   position: fixed;
   top: 0;
-  z-index: 2;
 }
 header > h1 {
-  flex: 5;
-  padding: 0 40px;
+  flex-basis: 45%;
+  flex-grow: 1;
+  padding: 0 4%;
+  color: hsl(var(--clr-secondary-400))
 }
 nav {
   display: flex;
-  flex: 3;
+  flex-grow: 1;
+  flex-shrink: 0;
+  justify-content: flex-end;
 }
 nav > ul {
   display: flex;
   justify-content: flex-end;
-  flex: 2;
+  flex-basis: 70%;
+  flex-grow: 1;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -36,13 +40,15 @@ li > a {
   text-decoration: none;
 }
 nav > button {
-  flex: 0.5;
+  flex-basis: 25%;
+  flex-shrink: 0;
+  flex-grow: 0;
   background-color: hsl(var(--clr-primary-400));
   border: none;
   color: white;
   border-radius: 10px;
   padding: 5px;
-  margin: 0 20px;
+  margin: 0 2%;
   cursor: pointer;
 }
 nav > button:hover {
@@ -108,10 +114,10 @@ nav > button:hover {
     display: none;
   }
   header > h1 {
-    flex: 5;
+    font-size: 1.5rem;
   }
   nav > button {
-    flex: 1;
+    flex-grow: 1;
   }
 }
 
@@ -123,6 +129,9 @@ nav > button:hover {
      'three five'
      'four four';
   }
+  header {
+    padding: 0.5rem 2rem;
+  }
 }
 
 @media screen and (min-width: 54em) {
@@ -133,13 +142,14 @@ nav > button:hover {
       "three four four";
   }
   nav > ul {
-    display: flex;
+    display: none;
   }
-  header > h1 {
-    flex: 5;
-  }
+
   nav > button {
-    flex: 0.5;
+    flex-grow: 1;
+  }
+  header {
+    padding: 0.5rem 2.5rem;
   }
 }
 
@@ -148,6 +158,24 @@ nav > button:hover {
       grid-template-areas:
       "one one two five"
       "three four four five";
+  }
+  nav > ul {
+    display: flex;
+  }
+  header {
+    padding: 0.5rem 3.5rem;
+  }
+}
+
+@media screen and (max-width: 33em) {
+  header {
+    padding: 0.5rem 1.5rem;
+  }
+  header > h1 {
+    font-size: 1.2rem;
+  }
+  nav {
+    display: none;
   }
 }
 
